# ai-delivery-enablement-control-plane

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  seed.py  services.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: ARCHITECTURE.md  AUTOMATION_ROADMAP.md  OPERATING_MODEL.md  RUNBOOK.md
tests/: conftest.py  test_api.py
