[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delivery-enablement-control-plane"
version = "1.0.0"
description = "Governed automation and operational intelligence for AI delivery workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krishna", email = "krishna.byf@gmail.com" }]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic-settings>=2.5,<3",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["tests"]
